2012-06-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result-detailed): Add References for second result in
	delta "changed" case.  Backport from trunk r13590.

2012-06-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details): Match PDF report for Download
	column by name instead of ID, because the ID changes.  Backport from trunk
	r13588.

2012-05-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_info_cve_lnk): Strip space from CVE, otherwise the
	links are broken.  Backport from trunk; initially committed in r13473.

2012-04-25  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version number to 3.0.2.

	* src/html/help.xsl: Updated version number to 3.0.2.

2012-04-25  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 3.0.1 release.

	* CHANGES: Updated.

2012-04-25  Michael Wiegand <michael.wiegand@greenbone.net>

	Clean up CMake infrastructure and ensure that compilation with modern
	gccs works. Backport from trunk; initially committed in r13354.

	* CMakeLists.txt: Remove setting of OPENVAS_LIB_INSTALL_DIR and
	OPENVAS_HEADER_INSTALL_DIR as they were never used and the information
	is retrieved via pkg-config now.

	* src/CMakeLists.txt: Move include_directories and link_directories to
	target_properties and target_link_libraries. Set link libraries via
	target_link_libraries and not via LINK_FLAGS since this breaks
	compilation with more modern gccs. Take the correct flags from
	pkg-config output.

	* INSTALL: Remove references to superfluous OPENVAS_LIB_INSTALL_DIR
	and OPENVAS_HEADER_INSTALL_DIR variables.

2012-04-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details): Update UUID of PDF report
	format.  Backport from trunk; initially committed in r13322.

2012-04-25  Matthew Mundell <matthew.mundell@greenbone.net>
